package com.directi.training.isp.exercice_refactored;

public interface IProximityDoor extends IDoor{
    void proximityCallback();
}
