package com.directi.training.isp.exercice_refactored;

public interface ITimeDoor extends IDoor{
    void timeOutCallback();
}
